#9 Fix flask dimentions on IE11

--- a/src/components/App/style/forms.scss
+++ b/src/components/App/style/forms.scss
@@ -65,6 +65,10 @@ select {
 		background-color .2s ease-in-out;
 	cursor: pointer;
 
+	&::-ms-expand {
+		display: none;
+	}
+
 	&:hover,
 	&:focus {
 		color: $color-text-darker;
@@ -84,7 +88,14 @@ select {
 }
 
 .group section:last-of-type {
-	margin-right: 0;
+	margin-right: 0px;
+}
+
+@media all and (-ms-high-contrast:none) {
+	// IE11: fix nested flexbox overflow
+	.group section:last-of-type {
+		margin-right: $spacing-single;
+	}
 }
 
 .control {
